--- a/package.json
+++ b/package.json
@@ -3,13 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "ts-node --project tsconfig.server.json server/index.ts",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
     "next": "9.5.5",
+    "pg": "^8.4.1",
+    "postgres": "^1.0.2",
     "react": "16.14.0",
-    "react-dom": "16.14.0"
+    "react-dom": "16.14.0",
+    "reflect-metadata": "^0.1.13",
+    "swr": "^0.3.6",
+    "typeorm": "^0.2.28"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.11.10",
+    "@types/react": "^16.9.53",
+    "postcss-preset-env": "^6.7.0",
+    "tailwindcss": "^1.9.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3"
   }
 }
