--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
     "type": "postgres",
-    "host": "192.168.99.101",
+    "host": "192.168.99.100",
     "port": 5432,
-    "username": "docker",
-    "password": "secret",
+    "username": "postgres",
+    "password": "postgres",
     "database": "justpc",
     "entities": ["server/entity/*.ts"],
     "logging": true,
