--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
-    "next": "9.5.5",
+    "next": "^9.5.5",
     "pg": "^8.4.1",
     "postgres": "^1.0.2",
     "react": "16.14.0",
